--- a/index.html
+++ b/index.html
@@ -2,9 +2,32 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Progate</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BreakFirst 101</title>
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   </head>
   <body>
-    <h1 class="title">How to Make a Website with HTML & CSS on your Computer</h1>
-  </body>
-</html>
+    <header>
+      <div class="container">
+        <div class="header-left">
+          <img class="logo" src="file:///C:/Users/aulia/Downloads/food%20header%20(1000%20x%201080%20px)%20(2).png">          
+        </div>
+        <span class="fa fa-bars menu-icon"></span>
+        <div class="header-right">
+          <a href="#">Home</a>
+          <a href="#">About Us</a>
+          <a href="#">Recipes</a>
+          <a href="#" class="contactus">Contact Us</a>
+        </div>
+      </div>
+    </header>
+      <div class="top-wrapper">
+      <div class="container">
+        <h1>GOOD FOOD, GOOD MOOD</h1>
+        <p>Like many, I love breakfast.</p>
+        <p>BreakFirst 101’s is still about impeccable attention to detail in our food and service, but in a more relaxed and casual family dining atmosphere.</p>
+        <p>BreakFirst 101’s serves an all-day breakfast and Bistro menu designed to rouse the senses. From comforting breakfast favorites and European brunch fares to classic deli favorites and sweet treats, our heartwarming menu complements the restaurant’s relaxed and vibrant atmosphere. Freshly baked bread and homemade jams, curds, and yogurt as well as prepared meats—all these add to the restaurant’s rustic charm.</p>
+      </div>
+    </div>
