--- a/index.html
+++ b/index.html
@@ -31,3 +31,4 @@
         <p>BreakFirst 101’s serves an all-day breakfast and Bistro menu designed to rouse the senses. From comforting breakfast favorites and European brunch fares to classic deli favorites and sweet treats, our heartwarming menu complements the restaurant’s relaxed and vibrant atmosphere. Freshly baked bread and homemade jams, curds, and yogurt as well as prepared meats—all these add to the restaurant’s rustic charm.</p>
       </div>
     </div>
+  </div>
