--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <div class="container">
         <div class="header-left">
-          <img class="logo" src="file:///C:/Users/aulia/Downloads/food%20header%20(1000%20x%201080%20px)%20(2).png">          
+          <img class="logo" src="https://github.com/auliyanurasyifa/github.io/blob/main/food%20header%20(1000%20x%201080%20px)%20(2).png">          
         </div>
         <span class="fa fa-bars menu-icon"></span>
         <div class="header-right">
