--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
         </div>
       </div>
     </header>
-      <div class="top-wrapper">
-      <div class="container">
+
+    <div class="top-wrapper">
+      <div class="description">
         <h1>GOOD FOOD, GOOD MOOD</h1>
         <p>Like many, I love breakfast.</p>
         <p>BreakFirst 101’s is still about impeccable attention to detail in our food and service, but in a more relaxed and casual family dining atmosphere.</p>
         <p>BreakFirst 101’s serves an all-day breakfast and Bistro menu designed to rouse the senses. From comforting breakfast favorites and European brunch fares to classic deli favorites and sweet treats, our heartwarming menu complements the restaurant’s relaxed and vibrant atmosphere. Freshly baked bread and homemade jams, curds, and yogurt as well as prepared meats—all these add to the restaurant’s rustic charm.</p>
       </div>
-      </div>
+    </div>
     
     <!--Reservasi-->
     <div class="contact-form">
@@ -50,5 +51,11 @@
       <p>We will contact you by email for further information. Thank you!</p>
       <input class="contact-submit" type="submit" value="Send">
     </div>
+    
+    <footer>
+      <div class="logo-footer">
+        <img src="./logo.png">
+      </div>
+    </footer>
   </body>
 </html>
