--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   
           <div class="resep3" >
             <div class="resep-left" style="float:left">
-              <img src="MonteverdoBarnsley.jpg" style="float:left">
+              <img src="./MonteverdoBarnsley.jpg" style="float:left">
               <p>Photo by Monteverdo Barnsley on Unsplash</p>
             </div>
             <div class="resep-right" style="float:left">
@@ -62,7 +62,7 @@
   
           <div class="resep1" >
             <div class="resep-left" style="float:left">
-              <img src="frenchtoast.png">
+              <img src="./frenchtoast.png">
               <p>Photo by Isra CGU on Unsplash</p>
             </div>
             <div class="resep-right" style="float:left">
@@ -81,7 +81,7 @@
           
           <div class="resep2" >
             <div class="resep-left" style="float:left">
-              <img src="brendagodinez-smoothie.jpg" style="padding-bottom: 10px;">
+              <img src="./brendagodinez-smoothie.jpg" style="padding-bottom: 10px;">
               <p>Photo by Brenda Godinez on Unsplash</p>
             </div>
             <div class="resep-right" style="float:left">
@@ -103,19 +103,19 @@
       <!--Gallery-->
     <div class="gallery">
         <div class="photo">
-          <img src="gal1.png" width="100%">
+          <img src="./gal1.png" width="100%">
         </div>
         <div class="photo">
-          <img src="gal2.png" width="100%">
+          <img src="./gal2.png" width="100%">
         </div>
         <div class="photo">
-          <img src="gal3.png" width="100%">
+          <img src="./gal3.png" width="100%">
         </div>
         <div class="photo">
-          <img src="gal4.png" width="100%">
+          <img src="./gal4.png" width="100%">
         </div>
         <div class="photo">
-          <img src="gal5.png" width="100%">
+          <img src="./gal5.png" width="100%">
         </div>
     </div> 
     <!--Reservasi-->
