--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="header-left">
           <img class="logo" src="./logo.png">          
         </div>
-        <span class="fa fa-bars menu-icon"></span>
+        <span class="fa fa-bars menu-icon" style="color:rgba(87, 84, 41, 0.719);"></span>
         <div class="header-right">
           <a href="#">Home</a>
           <a href="#">About Us</a>
@@ -138,19 +138,19 @@
         <img src="./logo.png" align="middle">
       </div>
       <ul class="footer-list">
-        <li><i class="fa fa-buliding"></i>
+        <li><i class="fa fa-buliding" style="font-size:15px;color:whitesmoke;margin:5px 0px;"></i>
           102 Faubourg Saint Honoré
         </li>
         <li>
-            <i class="fa fa-envelope"></i>
+            <i class="fa fa-envelope" style="font-size:15px;color:whitesmoke;margin:5px 0px;"></i>
             breakfirst101@progate.com
         </li>
         <li>
-            <i class="fa fa-phone""></i>
+            <i class="fa fa-phone" style="font-size:15px;color:whitesmoke;margin:5px 0px;"></i>
             +82 11 2010 2021
         </li>
         <li>
-            <i class="fa fa-instagram" ></i>
+            <i class="fa fa-instagram" style="font-size:15px;color:whitesmoke;margin:5px 0px;"></i>
             @breakfirst_101
         </li>
      
